gcc/testsuite/rust/rustc/ui/issues/issue-64792-bad-unicode-ctor.rs
struct X {}

const Y: X = X("รถ"); // { dg-error ".E0423." "" { target *-*-* } }

fn main() {}

